style(ui): fix ghost scrollbar jitter in resource card

--- a/style.css
+++ b/style.css
@@ -224,7 +224,14 @@ header {
     box-shadow: 0 0.625rem 0.9375rem -0.1875rem rgba(0, 0, 0, 0.1), 0 0.25rem 0.375rem -0.125rem rgba(0, 0, 0, 0.05) !important;
     padding: 0.625rem !important;
     overflow-y: auto !important;
+    overflow-x: hidden !important;
+    height: fit-content !important;
     max-height: 70vh !important;
+}
+
+#resource_accordion .prose p:last-child,
+#resource_accordion ul:last-child {
+    margin-bottom: 0 !important;
 }
 
 #chip_column {
